# twophase-solver-rs

./: .gitignore  Cargo.toml  README.md
solver/: Cargo.toml  flip_moves
solver/src/: common.rs  cubie.rs  face.rs  lib.rs  misc.rs  moves.rs
src/: common.rs  cubie.rs  face.rs  lib.rs  moves.rs
