[package]
name = "cube_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
arrayvec = "0.7.4"
bytemuck  =  { version = "1.14.0", features = ["min_const_generics"] }

[dev-dependencies]
tempfile = "3.8.0"

